kubernetes/apps/plants/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plants
  labels:
    backups.kalexlab.xyz/use: "true"
