kubernetes/apps/plants/manifests/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    kalexlab.xyz/app: plants
    kalexlab.xyz/component: database
  annotations:
    gatus.kalexlab.xyz/enabled: "true"
    gatus.kalexlab.xyz/scheme: tcp
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    kalexlab.xyz/app: plants
    kalexlab.xyz/component: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  labels:
    kalexlab.xyz/app: plants
    kalexlab.xyz/component: database
spec:
  replicas: 1
  serviceName: database
  selector:
    matchLabels:
      kalexlab.xyz/app: plants
      kalexlab.xyz/component: database
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: plants
        kalexlab.xyz/component: database
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: mysql
          image: "docker.io/library/mariadb:13.0.2"
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3306
              protocol: TCP
          readinessProbe:
            exec:
              command:
                [
                  "/bin/sh",
                  "-c",
                  "mariadb-admin ping -u$MARIADB_USER -p$MARIADB_PASSWORD",
                ]
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                [
                  "/bin/sh",
                  "-c",
                  "mariadb-admin ping -u$MARIADB_USER -p$MARIADB_PASSWORD",
                ]
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 5
          # resources:
          #   requests:
          #     memory: 150Mi
          #     cpu: 150m
          #   limits:
          #     memory: 600Mi
          #     cpu: 1000m
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/run/mysqld
              name: mysqld-run
            - mountPath: /var/lib/mysql
              name: database-pvc
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: mysqld-run
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: database-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
