kubernetes/apps/plants/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plants-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
    # Hortusfox returns 401 due to missing forward auth on everything
    gatus.kalexlab.xyz/endpoint: |
      conditions:
        - "[STATUS] == any(200,401)"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`plants.kalexlab.xyz`)
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: hortusfox
          port: 80
    - kind: Rule
      match: Host(`plants.kalexlab.xyz`) && (Path(`/manifest.json`) || PathPrefix(`/logo.png`))
      services:
        - name: hortusfox
          port: 80
  tls:
    secretName: plants-ingress-certificate-secret
