kubernetes/apps/plants/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: udp-53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hortusfox
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: plants
      kalexlab.xyz/component: hortusfox
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: plants
              kalexlab.xyz/component: mariadb
      ports:
        - protocol: TCP
          port: mariadb
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hortusfox-egress-fqdn
spec:
  endpointSelector:
    matchLabels:
      kalexlab.xyz/app: plants
      kalexlab.xyz/component: hortusfox
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: coredns
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY # UDP + TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: my-api.plantnet.org
        - matchName: api.openweathermap.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: plants
      kalexlab.xyz/component: mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: plants
              kalexlab.xyz/component: hortusfox
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: plants
              kalexlab.xyz/component: mariadb-backup
      ports:
        - protocol: TCP
          port: mariadb
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-backup
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: plants
      kalexlab.xyz/component: mariadb-backup
  policyTypes:
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: plants
              kalexlab.xyz/component: mariadb
      ports:
        - protocol: TCP
          port: mariadb
